--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ h1{
 }
 
 .numerirandom{
-    justify-content: center;
+    text-align: center;
 }
+
+.numerirandom button{
+    padding: 5px 5px;
+    margin-bottom: 20px;
+    background-color: pink;
+    border: 1px solid rgb(203, 192, 192);
+    border-radius: 5px;
+}
+
 
